# cokecan

./: CMakeLists.txt  sphereplot.nb
src/: FixedLoop.h  HalfCylinder.cpp  HalfCylinder.h  QuadraticBending.cpp  QuadraticBending.h  ShellEnergy.h  Sphere.cpp  StaticSolve.h  main.cpp
